--- a/engines/landing_page/app/views/layouts/landing_page/application.html.erb
+++ b/engines/landing_page/app/views/layouts/landing_page/application.html.erb
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>LandingPage</title>
-  <%= stylesheet_link_tag    "landing_page/application", :media => "all" %>
+  <title><%= yield :title %></title>
+<!--   
+	<%= stylesheet_link_tag    "landing_page/application", :media => "all" %>
   <%= javascript_include_tag "landing_page/application" %>
   <%= csrf_meta_tags %>
+ -->
 </head>
 <body>
 
