--- a/engines/landing_page/app/views/landing_page/pages/index.html.slim
+++ b/engines/landing_page/app/views/landing_page/pages/index.html.slim
@@ -1,2 +1,7 @@
-- content_for :title, page.title
-= page.inspect
+- content_for :title, product_page.title
+= product_page.inspect
+
+h1= product_page.title
+
+- product_page.products.each do |product|
+ h2= product.title
