--- a/app/views/statics/about.html.slim
+++ b/app/views/statics/about.html.slim
@@ -26,7 +26,7 @@
 
     .col-md-6.no-padding.pink
       .header.black
-        h2 we belive
+        h2 we believe
       span
         p We believe that fashion is a form of self expression to be celebrated and what better time to do so than at a special occasion. It's why we are utterly dedicated to helping young women craft a look that is totally unique to them
 
