--- a/app/assets/stylesheets/redesign/_product.css.scss
+++ b/app/assets/stylesheets/redesign/_product.css.scss
@@ -236,7 +236,6 @@ z.list-group-item.customization-option  {
 	height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
- 	padding: 0 20px 20px 20px;
 	position: fixed;
 	top: 0;
 	background-color:#FFFFFF;
@@ -303,13 +302,27 @@ z.list-group-item.customization-option  {
 
 #product-size-content {
 
+  .sizes-container {
+    padding-right: 30px;
+    padding-left: 30px;
+  }
+
   .size-box {
-		border:1px dashed #CCCCCC;
+		border:1px solid BLACK;
     text-align:center;
-    padding:5px;
-		line-height: 2.33333;
-		font-weight:600;
-		color:#333333;
+    width: 100%;
+    height: 45px;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 45px;
+    margin-top: 18px;
+    margin-bottom: 18px;
+  }
+
+  .grey {
+    background-color: #f5f5f5;
+    min-height: 270px;
+
   }
 
   .active .size-box {
@@ -326,6 +339,27 @@ z.list-group-item.customization-option  {
 	p.size-region {
 		color:#999999;
 	}
+
+  h2 {
+    padding-bottom: 15px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+      font-size: 16px;
+  }
+
+  .btn {
+      font-family: "Brandon Grotesque", sans-serif;
+      padding: 0;
+      height: 45px;
+      line-height: 45px;
+      margin-top: 25px;
+  }
+
+  .custom {
+    h2 {
+      padding-top: 30px;
+    }
+  }
 }
 
 #product-customizations-content {
