[bug][product page]: cursor on menu buttons

--- a/app/assets/stylesheets/redesign/_product.css.scss
+++ b/app/assets/stylesheets/redesign/_product.css.scss
@@ -22,6 +22,7 @@ z.list-group-item.customization-option  {
 
   .btn-customize {
     text-transform: uppercase;
+    cursor: pointer;
   }
 
   .btn-secondary {
