--- a/app/assets/stylesheets/redesign/_product.css.scss
+++ b/app/assets/stylesheets/redesign/_product.css.scss
@@ -399,36 +399,79 @@ z.list-group-item.customization-option  {
   display:block;
 }
 
+.vex.vex-theme-flat-attack .vex-content {
+  padding: 0 !important;
+}
+
+.vex.vex-theme-flat-attack .vex-content h2 {
+    font-family: "brandon-grotesque"!important;
+  }
+
+.vex.vex-theme-flat-attack .vex-content h6, span {
+  text-transform: uppercase;
+  font-weight: 500 !important;
+  margin-bottom: 0;
+}
 
 .vex-theme-flat-attack.fit-guide {
-  padding:0;
 
   .vex-content {
-    width:95%;
+    width:50%;
     height:95%;
     overflow-y:auto;
     z-index:9999 !important;
     border:5px solid black;
 
+  table {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    }
+
+    .table > thead > tr > th {
+      border-bottom: none;
+    }
+
+    img {
+      width: 217px;
+      display: block;
+    }
+
     h6 {
       font-size:1em;
-      font-weight:600;
     }
-    p, td{
+
+    p{
       font-size:0.666666em;
-      font-weight:300;
+      font-weight:400;
+    }
+
+    th {
+      padding-left: 10px
     }
 
     thead {
-      td {
-        font-size:1em;
-        font-weight:600;
-      }
+      text-transform: uppercase;
+      background-color:#f5f5f5;
+
     }
 
     td.sub-heading {
       font-size:0.666666em;
-      font-weight:600;
+      font-weight:400;
+      font-size: 15px;
+    }
+
+    td
+     {
+      border-top: none;
+      font-size:14px;
+      font-weight:400;
+      text-align: center;
+    }
+
+    tr:nth-child(even) {
+      background-color:#f5f5f5;
     }
 
     .vex-dialog-buttons {
