--- a/app/views/products/details/_size_guide.html.slim
+++ b/app/views/products/details/_size_guide.html.slim
@@ -6,33 +6,28 @@ h2.text-center Easy Size &amp; Measurement Guide
       p Please use a cloth tape measure. Keep the tape measure parallel to the floor and don’t wrap it too tight.
       p We recommend measuring yourself in your underwear, not over clothing and wearing the same bra (or no bra) that you intend to wear with the dress. We suggest getting a friend to help you if possible &amp; remember to stand with your feet together.
 
-      h6 Bust
-      p Measure around the fullest part of your bust
+      p BUST Measure around the fullest part of your bust
 
-      h6 Waist
-      p Measure around your natural waistline.
+      p WAIST Measure around your natural waistline.
 
-      h6 Hips
-      p Measure 20cm below your waistline at the fullest part of your hips.
+      p HIPS Measure 20cm below your waistline at the fullest part of your hips.
 
-      h6 Skirt Length
-      p Stand with your heels together, keep the tape straight and perpendicular to the floor. Measure from your natural waistline.
+      p SKIRT LENGTH Stand with your heels together,</br>keep the tape straight and perpendicular to the floor. Measure from your natural waistline.
 
-    .co-md-12.col-xs-12.col-xxs-12
-      = image_tag '_chartsize-popup.jpg'
+
+      = image_tag 'where-to-measure.png'
   .row
-    table.table.table-striped
+    table.table
       thead
         tr
-          th colspan='3' Sizes
+          th colspan='2' Sizes
           th colspan="2" Bust
           th colspan="2" Waist
           th colspan="2" Hip
       tbody
         tr
-          td.sub-heading AUS Size
-          td.sub-heading US Size
-          td.sub-heading UK Size
+          td.sub-heading Aus/UK
+          td.sub-heading US
           td.sub-heading cm
           td.sub-heading Inches
           td.sub-heading cm
@@ -42,7 +37,6 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 4
           td 0
-          td 4
           td 81
           td 32
           td 60
@@ -52,7 +46,6 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 6
           td 2
-          td 6
           td 84
           td 33
           td 63
@@ -62,7 +55,6 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 8
           td 4
-          td 8
           td 87
           td 34
           td 66
@@ -72,7 +64,6 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 10
           td 6
-          td 10
           td 92
           td 36
           td 71
@@ -82,7 +73,6 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 12
           td 8
-          td 12
           td 97
           td 38
           td 78
@@ -92,7 +82,6 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 14
           td 10
-          td 14
           td 102
           td 40
           td 85
@@ -102,7 +91,6 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 16
           td 12
-          td 16
           td 107
           td 42
           td 92
@@ -112,7 +100,6 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 18
           td 14
-          td 18
           td 112
           td 44
           td 99
@@ -122,7 +109,6 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 20
           td 16
-          td 20
           td 117
           td 46
           td 106
@@ -132,7 +118,6 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 22
           td 18
-          td 22
           td 122
           td 48
           td 113
@@ -142,7 +127,6 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 24
           td 20
-          td 24
           td 128
           td 50
           td 120
@@ -152,7 +136,6 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 26
           td 22
-          td 26
           td 134
           td 53
           td 127
@@ -160,7 +143,4 @@ h2.text-center Easy Size &amp; Measurement Guide
           td 142
           td 56
 
-  .row
-    .col-md-12.text-center
-      a.modal-close.btn.btn-black OK
 
