--- a/app/views/products/details/_size_guide.html.slim
+++ b/app/views/products/details/_size_guide.html.slim
@@ -3,8 +3,7 @@ h2.text-center Easy Size &amp; Measurement Guide
   .row
     .col-md-12.col-xs-12.col-xxs-12
       h6 How to Measure Yourself
-      p Please use a cloth tape measure. Keep the tape measure parallel to the floor and don’t wrap it too tight.
-      p We recommend measuring yourself in your underwear, not over clothing and wearing the same bra (or no bra) that you intend to wear with the dress. We suggest getting a friend to help you if possible &amp; remember to stand with your feet together.
+      p.no-padding Please use a cloth tape measure. Keep the tape measure parallel to the floor and don’t wrap it too tight. We recommend measuring yourself in your underwear, not over clothing and wearing the same bra (or no bra) that you intend to wear with the dress. We suggest getting a friend to help you if possible &amp; remember to stand with your feet together.
 
       p BUST Measure around the fullest part of your bust
 
