--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -169,3 +169,86 @@
     }
   }
 }
+
+
+
+
+.vex-theme-flat-attack.email-capture-modal.teen-vogue-2015 {
+  .vex-content {
+    background-color:#EEDDF0;
+    border: none;
+    height: 407px;
+    text-transform:uppercase;
+    border:4px solid black;
+  }
+
+  .vex-dialog-form {
+    .vex-dialog-input {
+      margin-top: 95px;
+
+      .standard-form  {
+        height: 35px;
+        margin-bottom:15px;
+      }
+    }
+  }
+
+  h2 {
+    background-color:#EEDDF0;
+    color:black;
+    text-align:center;
+    font-size:1.333333em;
+    font-family:"brandon-grotesque";
+    font-weight:400;
+    padding-top:60px
+  }
+
+  p {
+    font-size:2.8em;
+    text-align:center;
+    color:black;
+    font-weight:500;
+    font-family:Forum;
+  }
+
+  .btn.submit {
+    background-color:black;
+    color:white;
+  }
+  button {
+    font-family: "Brandon Grotesque", sans-serif;
+  }
+
+  ::-webkit-input-placeholder {
+     font-size: 15px;
+     text-transform: uppercase;
+     text-align: center;
+
+  }
+
+  :-moz-placeholder { /* Firefox 18- */
+     font-size: 15px;
+     text-transform: uppercase;
+     text-align: center;
+     color:#D3D3D3;
+  }
+
+  ::-moz-placeholder {  /* Firefox 19+ */
+     font-size: 15px;
+     text-transform: uppercase;
+     text-align: center;
+     color:#D3D3D3;
+  }
+
+  :-ms-input-placeholder {
+     font-size: 15px;
+     text-transform: uppercase;
+     text-align: center;
+     color:#D3D3D3;
+  }
+
+  .vex-dialog-input input[type="email"] {
+    border: 1px solid black;
+  }
+
+}
