[ref][modal] Minor tweaks to modal

--- a/app/views/shared/_email_capture_modal.html.slim
+++ b/app/views/shared/_email_capture_modal.html.slim
@@ -9,14 +9,15 @@
 
     email_capture_modal = "
       new window.page.EmailCaptureModal({
-        promocode: '#{promocode}',
-        content:   '#{content}',
-        heading:   '#{heading}',
-        message:   '#{message}',
-        className: '#{class_name}',
-        action:    '#{campaigns_email_capture_path}',
-        container: '#email-capture-fields',
-        timeout:    #{timeout}
+        promocode: \"#{promocode}\",
+        content:   \"#{content}\",
+        heading:   \"#{heading}\",
+        message:   \"#{message}\",
+        className: \"#{class_name}\",
+        action:    \"#{campaigns_email_capture_path}\",
+        container: \"#email-capture-fields\",
+        timeout:    #{timeout},
+        force:      true
       });
     "
 
