[bug][product colours] add and update colours

--- a/app/assets/stylesheets/redesign/_product_colours.css.scss
+++ b/app/assets/stylesheets/redesign/_product_colours.css.scss
@@ -26,28 +26,60 @@
         background-color:#00FF00;
       }
 
+      .color-pale-yellow {
+        background-color:#FFFACD;
+      }
+
+      .color-pale-green {
+        background-color:#ccffcc;
+      }
+
       .color-blue {
         background-color:#0000FF;
+      }
+
+      .color-royal-blue {
+        background-color:#333399;
       }
 
       .color-lavender {
         background-color:#E6E6FA;
       }
 
+      .color-lavender-grey {
+        background-color:#9999cc;
+      }
+
       .color-cobalt-blue {
-        background-color:#0047AB;
+        background-color:#0000cc;
+      }
+
+      .color-beige {
+        background-color:#efdecd;
       }
 
       .color-lemon {
         background-color:#FFFACD;
       }
 
+      .color-lemon-sorbet {
+        background-color:#ffff99;
+      }
+
       .color-pale-blue {
         background-color:#C0DCF4;
       }
 
+      .color-indigo {
+        background-color:#3366cc;
+      }
+
       .color-ice-blue {
-        background-color:#D4E8E9;
+        background-color:#99ffff;
+      }
+
+      .color-teal {
+        background-color:#009999;
       }
 
       .color-deep-purple {
@@ -71,15 +103,15 @@
       }
 
       .color-light-blue {
-        background-color:#81CDE9;
+        background-color:#66ccff;
       }
 
       .color-nude {
-        background-color:#E9CAB5;
+        background-color:#fdd5b1;
       }
 
       .color-champagne {
-        background-color:#EAE5C8;
+        background-color:#F9E3CB;
       }
 
       .color-navy-blue {
@@ -106,8 +138,20 @@
         background-color:#FF93CA;
       }
 
+      .color-candy-pink {
+        background-color:#ff99ff;
+      }
+
+      .color-light-pink {
+        background-color:#ffccff;
+      }
+
+      .color-fuschia {
+        background-color:#FF77E8;
+      }
+
       .color-hot-pink {
-        background-color:#FF0080;
+        background-color:#ff3399;
       }
 
       .color-plum {
@@ -139,7 +183,7 @@
       }
 
       .color-magenta {
-        background-color:#993274;
+        background-color:#cc0099;
       }
 
       .color-peach {
@@ -147,7 +191,7 @@
       }
 
       .color-marine-blue {
-        background-color:#02283C;
+        background-color:#0b4070;
       }
 
       .color-wine {
@@ -155,7 +199,11 @@
       }
 
       .color-teal {
-        background-color:#145e58;
+        background-color:#009999;
+      }
+
+      .color-persian-green {
+        background-color:#00A693;
       }
 
       .color-dark-purple {
@@ -167,30 +215,42 @@
       }
 
       .color-burnt-orange {
-        background-color:#CC5500;
+        background-color:#CF5300;
       }
 
       .color-seafoam {
-        background-color:#99cccc;
+        background-color:#41cbb5;
       }
 
       .color-bright-red {
         background-color:#ff3333;
       }
 
-      .color-brick {
-        background-color:#CC5500;
+      .color-bronze {
+        background-color:#cd7f32;
       }
 
-      .color-blue-floral {
+      .color-brick {
+        background-color:#993333;
+      }
+
+      .color-pine {
+        background-color:#01796f;
+      }
+
+      .color-sage {
+        background-color:#826a77;
+      }
+
+      .color-blue-azalea-floral {
         background-image:url('/product-color-images/blue_floral.jpg');
       }
 
-      .color-burnt-orange {
+      .color-midnight-floral {
         background-image:url('/product-color-images/midnightfloral.jpg');
       }
 
-      .color-burnt-orange {
+      .color-pink-azalea-floral {
         background-image:url('/product-color-images/pinkazalea_floral.jpg');
       }
     }
