--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -13,7 +13,7 @@ ruby:
         slider: {
           container: '#slides',
           images: #{ @product.all_images.to_json },
-          options: { 
+          options: {
             animation: 'fade',
             play: 6000,
             preselected: '#{raw @product.color_id}'
@@ -250,18 +250,19 @@ hr
 
 
 #product-color-content.product-side-panel
-  .row
-    .col-md-12.recommended
-      h2 Recommended Colors
+  .sizes-container.grey
+    .row
+      .col-md-12.recommended
+        h2 Recommended Colors
 
-      - @product.default_color_options.each do |color|
-        .col-md-3.col-xs-4.col-xxs-6
-          a.color-option.product-option href="#" data-id=color.id  data-name=color.presentation
-            - if color.value
-              span.option-box.color-box class="color-#{color.name}" style="background-color: #{ color.value }"
-            - elsif color.image
-              span.option-box.color-box class="color-#{color.name}" style="background-image: url('#{ color.image }')"
-            span.option-name= color.presentation
+        - @product.default_color_options.each do |color|
+          .col-md-6
+            a.color-option.product-option href="#" data-id=color.id  data-name=color.presentation
+              - if color.value
+                span.option-box.color-box class="color-#{color.name}" style="background-color: #{ color.value }"
+              - elsif color.image
+                span.option-box.color-box class="color-#{color.name}" style="background-image: url('#{ color.image }')"
+              span.option-name= color.presentation
 
   - if @product.custom_colors?
     .row
