[feat][collection] added ability to navigate inside original collection
- if reset_source will be set to false, then user navigation inside original collection
/dresses/prom?collection_filter => [... ]
otherwise, if he selects something, we create new collection
/dresses?new_collection_filter

--- a/app/views/products/collections/show.html.slim
+++ b/app/views/products/collections/show.html.slim
@@ -5,6 +5,7 @@ ruby:
       content: '.category .products-collection',
       banner:  '.category-header',
       page_size: 20,
+      reset_source: true,
       size: #{ @collection.products.size.to_i },
       total_products: #{ @collection.total_products.to_i },
       details_elements: {
