--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -137,7 +137,7 @@
     font-weight: 600;
     text-transform: uppercase;
     font-family: Forum;
-    color: white;
+    color: #a3a3a3;
     background-color: black;
     margin-top: 0;
   }
@@ -215,6 +215,7 @@
     background-color:black;
     color:white;
   }
+
   button {
     font-family: "Brandon Grotesque", sans-serif;
   }
@@ -251,4 +252,14 @@
     border: 1px solid black;
   }
 
+}
+
+.vex-theme-flat-attack .vex-content .vex-dialog-buttons .btn {
+  background-image: url('modal-close.png');
+  background-repeat: no-repeat;
+  color: black;
+  background-size: cover;
+  height: 40px;
+  margin-right: 10px;
+  margin-top: 5px;
 }
