[feat][product color]: add active state

--- a/app/assets/stylesheets/redesign/_product.css.scss
+++ b/app/assets/stylesheets/redesign/_product.css.scss
@@ -344,7 +344,7 @@ z.list-group-item.customization-option  {
     padding-bottom: 15px;
     text-transform: uppercase;
     letter-spacing: 1px;
-      font-size: 16px;
+    font-size: 16px;
   }
 
   .btn {
@@ -529,6 +529,12 @@ z.list-group-item.customization-option  {
     padding-top: 10px;
     padding-bottom: 30px;
     font-size: 16px;
+  }
+
+  .active .color-box{
+    background-image: url('tick-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
   }
 
   .option-name {
