--- a/app/views/layouts/redesign/_mobile_menu.html.slim
+++ b/app/views/layouts/redesign/_mobile_menu.html.slim
@@ -49,20 +49,20 @@ a.cd-top href='#top' Top
   .row
     .col-xs-3.mobile-menu-icon.mobile-active
       a href="/dresses"
-        span.hidden-xxs> View&nbsp;
-        | All
+        span.hidden-xxs
+        | View All
     .col-xs-3.mobile-menu-icon.style
       a href="#" data-menu-options-container='#mobile-style'
-        span.hidden-xs> By&nbsp;
-        | Style
-    .col-xs-3.mobile-menu-icon
+        span.hidden-xs
+        | By Style
+    .col-xs-3.mobile-menu-icon.color
       a href="#" data-menu-options-container='#mobile-color'
-        span.hidden-xs> By&nbsp;
-        | Color
-    .col-xs-3.mobile-menu-icon
+        span.hidden-xs
+        | By Color
+    .col-xs-3.mobile-menu-icon.event
       a href="#" data-menu-options-container='#mobile-event'
-        span.hidden-xs> By&nbsp;
-        | Event
+        span.hidden-xs
+        | By Event
 
 
 = content_for :inline_javascript do
