--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -259,7 +259,8 @@ hr
           .col-md-6
             a.color-option.product-option href="#" data-id=color.id  data-name=color.presentation
               - if color.value
-                span.option-box.color-box class="color-#{color.name}" style="background-color: #{ color.value }"
+                span.option-box.color-box class="color-#{color.name}"
+                /# style="background-color: #{ color.value }"
               - elsif color.image
                 span.option-box.color-box class="color-#{color.name}" style="background-image: url('#{ color.image }')"
               span.option-name= color.presentation
