--- a/app/assets/stylesheets/redesign/_product.css.scss
+++ b/app/assets/stylesheets/redesign/_product.css.scss
@@ -236,6 +236,7 @@ z.list-group-item.customization-option  {
 	h2 {
 		text-align:center;
 		font-size:1.222222em;
+    text-transform: uppercase;
 	}
 
   a.product-option {
@@ -527,5 +528,45 @@ z.list-group-item.customization-option  {
   .grey {
     background-color: #f5f5f5;
     min-height: 270px;
+  }
+}
+
+#product-customizations-content {
+  background-color: #f5f5f5;
+
+  h2 {
+    padding-bottom: 30px;
+    padding-top: 10px;
+  }
+
+  .col-md-10 {
+    background-color: white;
+    margin-bottom: 40px;
+  }
+
+  span.option-price {
+    font-weight: 600;
+  }
+
+  p {
+    font-weight: 400;
+    padding-bottom: 10px;
+  }
+
+  .image-box {
+    height: 250px;
+
+    img {
+      height: 250px;
+      width: 245px;
+       display: block;
+      margin-right: auto;
+      margin-left: auto;
+    }
+  }
+
+  .customization-option {
+    background-color: #013648;
+    color: white;
   }
 }
