--- a/app/views/layouts/redesign/_address.html.slim
+++ b/app/views/layouts/redesign/_address.html.slim
@@ -16,7 +16,7 @@ div.address itemscope="" itemtype="http://schema.org/Organization"
         ',
         span itemprop="addressCountry" Australia
         br
-        span itemprop="phone" Phone 1300 924 860
+        span itemprop="telephone" Phone 1300 924 860
 
       p.abn itemprop="taxID" ABN 83 162 501 064
 
@@ -33,4 +33,4 @@ div.address itemscope="" itemtype="http://schema.org/Organization"
         ',
         span itemprop="addressCountry" USA
         br
-        span itemprop="phone" Phone 866 527 7797
+        span itemprop="telephone" Phone 866 527 7797
