[copy][fame chain] Fix typos spacing

--- a/app/views/fame_chains/new.html.slim
+++ b/app/views/fame_chains/new.html.slim
@@ -43,20 +43,20 @@
     .row
       h4.text-center what you get
       ul
-        li oppertunity to be invited to co-design a formal dress.
+        li opportunity to be invited to co-design a formal dress.
         li 15% comission on every dress that one of your followers buys from our store
         li
-          |Opportunity to link to other blogs and
+          |Opportunity to link to other blogs and&nbsp
           span increase your own blogs visibility
         li
-          span a free
+          span a free&nbsp
           | dress gifted to you to style for each blogger with over 20k following.
         li Public endorsement of your blog as part of The Fame Chain.
         li Oppotunity to feature through our own soial media channel and gain exposure.
-        li VIP acess to special discounts for you and your followers.
-        li Acess to a network of like-minded young women and content.
+        li VIP access to special discounts for you and your followers.
+        li Access to a network of like-minded young women and content.
         li
-          span jumpstart
+          span jumpstart&nbsp
           | in your blogging, fashion and/or technology carer.
         li VIP access to our annual paid internship competition.
 
@@ -67,7 +67,7 @@
         li Apply to join The Fame Chain
         li Applications are assessed within 5 days.
         li If you are accepted, you get all the above perks.
-        li Recive the Fame Chain Welcome kity with technical instructions on how to join.
+        li Receive the Fame Chain Welcome kit with technical instructions on how to join.
       = image_tag "_famechain/glam-rebel5.jpg", alt: 'Something here', class: 'img-responsive portrait-img'
 
   .form
