--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -150,7 +150,7 @@ header
                 = link_to break_hearts_collection_path do
                   .image-container
                     = image_tag src='edits/BREAK-HEARTS/1_141119_F&P_NYE_01_0044.jpg', :class => 'img-responsive', :alt => 'Fame &amp; Partners'
-                  p.text-center Break Hearts not Bank Accounts Collection
+                  p.text-center Break Hearts not Bank Accounts
 
         li.menu-item
           = link_to 'Blog', blog_path, class: 'menu-item--link'
