--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -10,7 +10,7 @@
         li.footer-nav--item
           = link_to 'Why Shop With Us', why_us_path
         li.footer-nav--item
-          = link_to 'The Fame Team', about_us_path
+          = link_to 'About Us', about_us_path
         li.footer-nav--item
           = link_to 'FAQs', faqs_path
 
