[product][collection] Add button to clear customziation

--- a/app/assets/stylesheets/redesign/_product.css.scss
+++ b/app/assets/stylesheets/redesign/_product.css.scss
@@ -569,4 +569,9 @@ z.list-group-item.customization-option  {
     background-color: #013648;
     color: white;
   }
+	
+	.btn-black.customization-option {
+		background-color: #000000;
+	}
+
 }
