--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -293,3 +293,7 @@ hr
           a.customization-option.list-group-item href="#" data-id=option.id data-name=option.name data-price=option.display_price
             span.option-price= "+#{option.display_price}"
 
+    .row
+      .col-md-10.col-md-offset-1
+        button.btn-clear-customizations.btn.btn-block.btn-black.customization-option data-id="original" data-name="original" data-price=""
+          | Clear Selection
