[blah]blah] rename the thing to the other thing

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -141,10 +141,10 @@ header
                   p.text-center Our Beautiful Bridesmaids Collection
 
               .col-md-3
-                = link_to amfam_collection_path do
+                = link_to wicked_game_collection_path do
                   .image-container
                      = image_tag src='edits/AMFAM/1_141223_01_F&PAMFAM_1831.jpg', :class => 'img-responsive', :alt => 'Fame &amp; Partners'
-                  p.text-center The AMFAM Collaboration Collection
+                  p.text-center The Wicked Game Collection
 
               .col-md-3
                 = link_to break_hearts_collection_path do
