--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -258,11 +258,11 @@ hr
         - @product.default_color_options.each do |color|
           .col-md-6
             a.color-option.product-option href="#" data-id=color.id  data-name=color.presentation
+              span.option-box.color-box class="color-#{color.name}"
               - if color.value
-                span.option-box.color-box class="color-#{color.name}"
-                /# style="background-color: #{ color.value }"
+                /! style="background-color: #{ color.value }"
               - elsif color.image
-                span.option-box.color-box class="color-#{color.name}" style="background-image: url('#{ color.image }')"
+                /! span.option-box.color-box class="color-#{color.name}" style="background-image: url('#{ color.image }')"
               span.option-name= color.presentation
 
   - if @product.custom_colors?
