[css][product] Left-align heading

--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -170,7 +170,7 @@ ruby:
               = image_tag(item.image_url) if item
 
     .col-md-6.col-sm-12
-      h3.text-center The Story
+      h3 The Story
       br
       - if @product.preorder?
         .pre-order
