--- a/app/views/landing_pages/sale.html.slim
+++ b/app/views/landing_pages/sale.html.slim
@@ -21,11 +21,11 @@ ruby:
       .container
         .page-title--details
           h1.no-padding-bottom.white
-            | LOW LOW PRICES
-          p SUCH FASHION. SO WOW.
+            | Low prices, high standards
+          p Up to 80% off last season styles
 
     .page-content.products-collections.category
       .container.relative.products-collection
-        - all_products = get_products_from_edit('SALE', nil, nil, 4)
+        - all_products = get_products_from_edit('SALE', nil, nil, 99)
         - all_products.each_slice(4) do |products|
           =render :partial => '/landing_pages/products_four', :locals => { :products => products }
