[fix][css] replace bad font name

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -129,7 +129,7 @@ h1.edit-title {
 }
 
 body {
-  font-family: "Brandon Grotesque", sans-serif;
+  font-family: "brandon-grotesque", sans-serif;
 }
 
 .cd-top {
