--- a/app/assets/stylesheets/redesign/_product.css.scss
+++ b/app/assets/stylesheets/redesign/_product.css.scss
@@ -328,7 +328,7 @@ z.list-group-item.customization-option  {
   }
 
   .btn {
-      font-family: "Brandon Grotesque", sans-serif;
+      font-family: "brandon-grotesque", sans-serif;
       padding: 0;
       height: 45px;
       line-height: 45px;
