--- a/app/assets/stylesheets/redesign/_style_consult.css.scss
+++ b/app/assets/stylesheets/redesign/_style_consult.css.scss
@@ -14,7 +14,7 @@
   }
 
   .submit input{
-    font-family: "Brandon Grotesque", sans-serif;
+    font-family: "brandon-grotesque", sans-serif;
   }
 }
 
