--- a/app/assets/stylesheets/redesign/_cart.css.scss
+++ b/app/assets/stylesheets/redesign/_cart.css.scss
@@ -2,7 +2,7 @@
 
   .btn {
     padding: 10px 12px 6px 12px;
-    font-family: "Brandon Grotesque", sans-serif;
+    font-family: "brandon-grotesque", sans-serif;
   }
 }
 
