--- a/app/assets/stylesheets/redesign/_index.css.scss
+++ b/app/assets/stylesheets/redesign/_index.css.scss
@@ -309,7 +309,7 @@
 
 .taste-of-fame-btn {
 	background-color: #003647;
-	font-family: "Brandon Grotesque", sans-serif;
+	font-family: "brandon-grotesque", sans-serif;
 	color: white;
 	margin-top: 3rem;
 	width: 33%;
@@ -404,7 +404,7 @@
 	}
 
 		h2.caption-title {
-			font-family: "Brandon Grotesque", sans-serif;
+			font-family: "brandon-grotesque", sans-serif;
 			color: black;
 			text-align: center;
 			font-size: 7rem;
@@ -448,7 +448,7 @@
 		font-weight: 400;
 
 		h2.caption-title {
-			font-family: "Brandon Grotesque", sans-serif;
+			font-family: "brandon-grotesque", sans-serif;
 			color: white;
 			text-align: center;
 			font-size: 3rem;
@@ -464,7 +464,7 @@
 		}
 
 		p {
-			font-family: "Brandon Grotesque", sans-serif;
+			font-family: "brandon-grotesque", sans-serif;
 			color: white;
 			font-size: 5rem;
 			text-align: center;
@@ -480,7 +480,7 @@
 
 .prom-btn {
 	background-color: #d5eff0;
-	font-family: "Brandon Grotesque", sans-serif;
+	font-family: "brandon-grotesque", sans-serif;
 	color: black;
 	width: 100%;
 	margin-top: 5rem;
