--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -83,7 +83,7 @@
   }
 
   button {
-    font-family: "Brandon Grotesque", sans-serif;
+    font-family: "brandon-grotesque", sans-serif;
   }
 
   ::-webkit-input-placeholder {
@@ -218,7 +218,7 @@
   }
 
   button {
-    font-family: "Brandon Grotesque", sans-serif;
+    font-family: "brandon-grotesque", sans-serif;
   }
 
   ::-webkit-input-placeholder {
