--- a/app/assets/stylesheets/redesign/_products_collections.css.scss
+++ b/app/assets/stylesheets/redesign/_products_collections.css.scss
@@ -134,7 +134,7 @@
 
 .select2-container--default .select2-selection--single .select2-selection__rendered {
 	color: black;
-	font-family: "Brandon Grotesque", sans-serif;
+	font-family: "brandon-grotesque", sans-serif;
 }
 
 #select2-product_order-results {
@@ -166,7 +166,7 @@
 li.select2-results__option {
 	background-color: #f5f5f5 ;
 	font-weight: 600;
-	font-family: "Brandon Grotesque", sans-serif;
+	font-family: "brandon-grotesque", sans-serif;
 	height: 45px;
 }
 
