--- a/app/assets/stylesheets/redesign/_vars.css.scss
+++ b/app/assets/stylesheets/redesign/_vars.css.scss
@@ -3,7 +3,7 @@ $gray-light-bg: #f5f5f5;
 // @end Colors
 
 // Fonts
-$font-family-secondary: 'Brandon Grotesque', sans-serif;
+$font-family-secondary: 'brandon-grotesque', sans-serif;
 // @end Fonts
 
 // Form
