[fix][old_layout] fixed path

--- a/app/views/layouts/_header_regular_navigation.html.slim
+++ b/app/views/layouts/_header_regular_navigation.html.slim
@@ -136,7 +136,7 @@
                             li = link_to 'Formal Dresses', build_taxon_path('Formal'), title: 'Formal Dresses', class: "collection"
                             li = link_to 'Prom Dresses', build_taxon_path('Prom'), title: 'Prom Dresses', class: "collection"
                             li = link_to 'Plus Size', plus_size_path, title: 'Plus Size Dresses', class: "collection"
-                            li = link_to 'Next Day Delivery', next_day_delivery_path, title: 'Next Day Delivery', class: "collection highlight"
+                            li = link_to 'Next Day Delivery', express_delivery_path, title: 'Next Day Delivery', class: "collection highlight"
 
                     .grid-7.promos
                       h2 What's hot now
