--- a/app/views/shared/_footer_browse.html.slim
+++ b/app/views/shared/_footer_browse.html.slim
@@ -13,7 +13,7 @@
         li = link_to 'Long Dresses', build_taxon_path('Long'), title: 'Long Dresses'
         li = link_to 'Short Dresses', build_taxon_path('Short'), title: 'Short Dresses'
         li = link_to 'Plus Size', plus_size_path, title: 'Plus Size Dresses'
-        li = link_to 'Next Day Delivery', next_day_delivery_path, title: 'Next Day Delivery'
+        li = link_to 'Next Day Delivery', express_delivery_path, title: 'Next Day Delivery'
     .grid-6
       .row
         .grid-4
