--- a/app/views/users/shared/_tabs.html.slim
+++ b/app/views/users/shared/_tabs.html.slim
@@ -1,16 +1,32 @@
 - active_tab ||= controller_name
 
-ul.nav.nav-tabs
-  li class=( %w{profiles account_settings}.include?(active_tab.to_s) ? 'active' : '')
-    = link_to 'Account Settings', profile_path, remote: true
+ul.nav.nav-tabs-lg
+  li.col-sm-3 class=( %w{profiles account_settings}.include?(active_tab.to_s) ? 'active' : '')
+    = link_to profile_path, remote: true do
+      span 
+        ' Account 
+        br
+        ' Settings
   
   - if Features.active?(:moodboard) || current_user_moodboard.items.any?
-    li class=( %w{wishlist wishlist_items}.include?(active_tab.to_s) ? 'active' : '')
-      = link_to 'My Moodboard', wishlist_path, remote: true
-  li class=( %w{orders order}.include?(active_tab.to_s) ? 'active' : '')
-    = link_to 'My Orders', user_orders_path, remote: true
+    li.col-sm-3 class=( %w{wishlist wishlist_items}.include?(active_tab.to_s) ? 'active' : '')
+      = link_to wishlist_path, remote: true do
+        span 
+          ' My 
+          br
+          ' Moodboard
+  li.col-sm-3 class=( %w{orders order}.include?(active_tab.to_s) ? 'active' : '')
+    = link_to user_orders_path, remote: true do
+      span
+        ' My 
+        br
+        ' Orders
   /li class=( %w{reviews}.include?(active_tab.to_s) ? 'active' : '')
   /  = link_to 'My Reviews', reviews_path, remote: true
   - if Features.active?(:style_quiz)
-    li class=( %w{styleprofile styleprofiles}.include?(active_tab.to_s) ? 'active' : '')
-      = link_to 'My Style Profile', styleprofile_path, remote: true
+    li.col-sm-3 class=( %w{styleprofile styleprofiles}.include?(active_tab.to_s) ? 'active' : '')
+      = link_to styleprofile_path, remote: true do
+        span
+          ' My Style 
+          br
+          ' Profile
