--- a/app/views/users/wishlists_items/index.html.slim
+++ b/app/views/users/wishlists_items/index.html.slim
@@ -65,11 +65,9 @@ javascript:
                         .name= product.name
                         .price= product_price_with_discount(product.price, product.discount)
 
-                    .actions
-                      .col-md-12.text-center
-                        = link_to 'Buy this Dress', product.path, class: 'buy btn btn-black', data: { variant: product.variant_id, id: product.item_id }
-                        br
-                        = link_to 'Remove', wishlists_item_path(product.item_id), id: "remove-product-#{product.item_id}", data: { id: product.item_id }, class: 'remove small'
+                    .actions.text-center
+                      = link_to 'Buy this Dress', product.path, class: 'buy btn btn-md btn-black', data: { variant: product.variant_id, id: product.item_id }
+                      = link_to 'Remove', wishlists_item_path(product.item_id), id: "remove-product-#{product.item_id}", data: { id: product.item_id }, class: 'remove small'
 
 
 / .modal.edit-line-item(style="display: none;")
