change order page heading

--- a/app/views/spree/orders/show.html.slim
+++ b/app/views/spree/orders/show.html.slim
@@ -16,8 +16,8 @@ ruby:
   .container
     .page-title--details
       - if successfully_ordered
-        h1.no-padding-bottom.text-white #{@order.full_name}, YOUR DRESS IS NOW ON IT'S WAY
-      .subtitle  Don't forget to book your free styling session! Email: #{mail_to("team@fameandpartners.com", "team@fameandpartners.com", subject:"STYLING SESSION BOOKING")}
+        h1.no-padding-bottom.text-white Thanks
+      .subtitle We've received your order
 
 .page-content.user.order.show
   .container.relative
