--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -2,7 +2,7 @@
 .page-content.index
   #theTarget style=("height: 720px;")
 
-    div.taste-of-fame.slider-action data-href="/dresses"
+    div.taste-of-fame.slider-action data-href="/dresses" style="margin-top:11px;"
       .slider-image-caption.height-100
         .container.height-100
           .promotion
@@ -73,4 +73,3 @@
 
     h4 beautiful, luxe finish dress fabrics
     p Metallics, sequins, taffeta, satin, chiffon, lace all available in extensive colour palettes you can choose.
-
