--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -83,8 +83,7 @@ ruby:
       h2 = @product.name
       p.product-section-description
       p#product-price
-        = product_price_with_discount(@product.price, @product.discount)
-      p#product-current-price.hidden data-original-price=product_price_with_discount(@product.price, @product.discount)
+        = product_price_with_discount(@product.price, @product.discount || 0)
 
     .product-section--selection
       /! size & color & customizations selectors
