[fix][home] margin in the right spot

--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -1,8 +1,8 @@
 
 .page-content.index
-  #theTarget style=("height: 720px;")
+  #theTarget style=("height: 720px;margin-top:11px;")
 
-    div.taste-of-fame.slider-action data-href="/dresses" style="margin-top:11px;"
+    div.taste-of-fame.slider-action data-href="/dresses"
       .slider-image-caption.height-100
         .container.height-100
           .promotion
