Home slider margin

--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -1,6 +1,6 @@
 
 .page-content.index
-  #theTarget style=("height: 720px;margin-top:11px;")
+  #theTarget style=("height: 720px;margin-top:10px")
 
     div.taste-of-fame.slider-action data-href="/dresses"
       .slider-image-caption.height-100
