--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -131,25 +131,25 @@ header
               .col-md-3
                 = link_to prom_collection_path do
                   .image-container.real-prom
-                    = image_tag src='edits/real_prom/1_REALPROM_03_035_ret.jpg', :class => 'img-responsive', :alt => 'Fame &amp; Partners'
+                    = image_tag src='edits/real_prom/1_REALPROM-edits-nav.jpg', :class => 'img-responsive', :alt => 'Fame &amp; Partners'
                   p.text-center Our Official Prom Collection
 
               .col-md-3
                 = link_to bridesmaid_collection_path do
                   .image-container.bridesmaids
-                    = image_tag src='edits/BRIDESMAIDS/1_171114_F&P_-BRIDESMAIDS_Shot_2_129.jpg', :class => 'img-responsive', :alt => 'Fame &amp; Partners'
+                    = image_tag src='edits/BRIDESMAIDS/1_171114_F&P_-BRIDESMAIDS-edits-nav.jpg', :class => 'img-responsive', :alt => 'Fame &amp; Partners'
                   p.text-center Our Beautiful Bridesmaids Collection
 
               .col-md-3
                 = link_to wicked_game_collection_path do
                   .image-container
-                     = image_tag src='edits/AMFAM/1_141223_01_F&PAMFAM_1831.jpg', :class => 'img-responsive', :alt => 'Fame &amp; Partners'
+                     = image_tag src='edits/AMFAM/1_141223_01_F&PAMFAM-edits-nav.jpg', :class => 'img-responsive', :alt => 'Fame &amp; Partners'
                   p.text-center The Wicked Game Collection
 
               .col-md-3
                 = link_to break_hearts_collection_path do
                   .image-container
-                    = image_tag src='edits/BREAK-HEARTS/1_141119_F&P_NYE_01_0044.jpg', :class => 'img-responsive', :alt => 'Fame &amp; Partners'
+                    = image_tag src='edits/BREAK-HEARTS/1_141119_F&P_NYE-edits-nav.jpg', :class => 'img-responsive', :alt => 'Fame &amp; Partners'
                   p.text-center Break Hearts not Bank Accounts
 
         li.menu-item
