[chore][select2 dropdowns]: change active state

--- a/app/assets/stylesheets/redesign/_product.css.scss
+++ b/app/assets/stylesheets/redesign/_product.css.scss
@@ -123,6 +123,12 @@ z.list-group-item.customization-option  {
 	background-color: transparent;
 }
 
+.select2, .select2-container, .select2-container--default, .selection, .select2-selection, .select2-selection--single ,.select2-selection__rendered, .select2-selection__arrow, .select2-selection__rendered, .select2-search__field{
+  &:focus {
+    outline:none;
+  }
+}
+
 .select2-container .select2-selection--single {
 	height:4.5rem !important ;
 }
@@ -569,7 +575,7 @@ z.list-group-item.customization-option  {
     background-color: #013648;
     color: white;
   }
-	
+
 	.btn-black.customization-option {
 		background-color: #000000;
 	}
