--- a/app/assets/stylesheets/redesign/_fame_chain.css.scss
+++ b/app/assets/stylesheets/redesign/_fame_chain.css.scss
@@ -1,6 +1,11 @@
 .thefamechain {
 	padding-top: 0;
 
+	.row {
+		margin-left: 0;
+		margin-right: 0;
+	}
+
 	.container-fluid {
 		padding-left: 0;
 		padding-right: 0;
@@ -8,6 +13,8 @@
 
 	.apply {
 		background-color: black;
+		margin-left: 0;
+		margin-right: 0;
 
 		@media screen and (max-width: 768px) {
 			margin-left: 0;
