[chore][fame chain]: update image path

--- a/app/views/fame_chains/new.html.slim
+++ b/app/views/fame_chains/new.html.slim
@@ -10,13 +10,13 @@
     .row
       a href="/dresses/prom"
         .col-md-4.text-center.no-padding
-          = image_tag "glam_rebel.jpg", alt: 'Prom Queen collection', class: 'img-responsive '
+          = image_tag "_famechain/glam_rebel.jpg", alt: 'Prom Queen collection', class: 'img-responsive '
       a href="#email-container"
         .col-md-4.text-center.no-padding
-          = image_tag "glam_rebel2.jpg", alt: 'Newsletter sign up', class: 'img-responsive'
+          = image_tag "_famechain/glam_rebel2.jpg", alt: 'Newsletter sign up', class: 'img-responsive'
       a href="/style-consultation"
         .col-md-4.text-center.no-padding
-          = image_tag "real_prom.jpg", alt: 'Styling session sign up', class: 'img-responsive'
+          = image_tag "_famechain/real_prom.jpg", alt: 'Styling session sign up', class: 'img-responsive'
 
   .container-fluid.apply
     .row.text-center
@@ -52,7 +52,7 @@
           span a free&nbsp
           | dress gifted to you to style for each blogger with over 20k following.
         li Public endorsement of your blog as part of The Fame Chain.
-        li Oppotunity to feature through our own soial media channel and gain exposure.
+        li Oppotunity to feature through our own social media channel and gain exposure.
         li VIP access to special discounts for you and your followers.
         li Access to a network of like-minded young women and content.
         li
