--- a/app/views/products/search_results/show.html.slim
+++ b/app/views/products/search_results/show.html.slim
@@ -1,8 +1,22 @@
+ruby:
+  js_tracker = ''
+  if @search_collection.present?
+    js_tracker = "track.search('#{j analytics_label(:search_query, @search_collection.query_string)}');"
+  end
+
+  init_product_collection_moodboard_links = "
+    initProductCollectionMoodboardLinks({
+      container: '.category .products-collection',
+      buttons:   'span.moodboard'
+    });"
+
 - content_for :head do
   meta name="robots" content="noindex, nofollow"
 
 = content_for :inline_javascript do
   = raw "$('.img-product').hoverable();"
+  = init_product_collection_moodboard_links
+  = js_tracker
 
 .page-title.default style="background-color:#EDDCEF;"
   .container
@@ -10,34 +24,18 @@
       h1.no-padding-bottom Search
 
 .page-content.products-collections.category
-
-  .container.relative.search.products-collection
-    - if @query_string.blank?
+  .container.relative.products-collection
+    - if @search_collection.blank?
       .row.relative
         .col.col-md-12
           | You need to search for something
 
     - else
-      - if @products.empty?
+      - if @search_collection.total_products.to_i == 0
         .row.relative
-          .col.col-md-12= "We couldn't find any dresses like #{@query_string}"
+          .col.col-md-12= "We couldn't find any dresses like #{ @search_collection.query_string }"
 
-      - @products.each_slice(4) do |products|
+      - @search_collection.products.each_slice(4) do |products|
         .row.relative
-          - products.each do |product|
-            .col-md-3.col-xs-6.col-xxs-12.category--item
-              = link_to collection_product_path(product) do
-                - if product.images.any?
-                  = cropped_product_hoverable_image_tag(product)
-
-              .details.text-center
-                span.name = product.name
-                span.price = price_for_product(product)
-
-              - if product.fast_delivery == true
-            	 = image_tag src='express_delivery.png', class: 'express-delivery'
-
-
-
-  = content_for :inline_javascript do
-    | track.search('#{{j analytics_label(:search_query, @query_string) }}');
+          = render partial: 'products/collections/product', collection: products, as: :product
+          .clearfix.visible-sm-block.visible-xs-block
