removed static product colours css from asset

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -40,7 +40,7 @@
 @import 'redesign/mobile_menu';
 @import 'redesign/faqs';
 @import 'redesign/terms';
-@import 'redesign/product_colours';
+//@import 'redesign/product_colours';
 @import 'redesign/stories-images';
 @import 'redesign/login';
 @import 'redesign/sale_lp';
